vdsm: Fix of line wraps in right menu

--- a/vdsm/static/app.css
+++ b/vdsm/static/app.css
@@ -23,3 +23,8 @@
     font-size: 1.5em;
     text-align: center;
 }
+
+#right-menu-list {
+    list-style-type: none;
+    padding-left: 0;
+}
